--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "@fs/gatsby-plugin-drive",
+  "name": "gatsby-source-drive",
   "version": "0.0.1",
   "main": "index.js",
   "license": "MIT",
-  "author": "Fabian Schultz <desk@fabianschultz.com>",
-  "description": "Downloads and caches a Google Drive folder that you can then query with gatsby-source-filesystem.",
+  "author": "Joe Palmieri <joe@jpalmieri.com>",
+  "description": "Downloads a Google Drive folder and adds graphql nodes for the files.",
   "repository": {
     "type": "git",
-    "url": "https://github.com/fabe/gatsby-plugin-drive"
+    "url": "https://github.com/jpalmieri/gatsby-source-drive"
   },
   "bugs": {
-    "url": "https://github.com/fabe/gatsby-plugin-drive/issues"
+    "url": "https://github.com/jpalmieri/gatsby-source-drive/issues"
   },
-  "homepage": "https://github.com/fabe/gatsby-plugin-drive#readme",
+  "homepage": "https://github.com/jpalmieri/gatsby-source-drive#readme",
   "scripts": {
     "build": "babel src --out-dir . --ignore __tests__",
     "prepublish": "cross-env NODE_ENV=production npm run build",
