--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gatsby-source-drive",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "main": "index.js",
   "license": "MIT",
   "author": "Joe Palmieri <joe@jpalmieri.com>",
@@ -13,8 +13,12 @@
     "url": "https://github.com/jpalmieri/gatsby-source-drive/issues"
   },
   "homepage": "https://github.com/jpalmieri/gatsby-source-drive#readme",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
+  },
   "scripts": {
     "build": "babel src --out-dir . --ignore __tests__",
+    "postinstall": "cross-env NODE_ENV=production npm run build",
     "prepublish": "cross-env NODE_ENV=production npm run build",
     "watch": "babel -w src --out-dir . --ignore __tests__"
   },
@@ -23,10 +27,10 @@
     "gatsby-plugin"
   ],
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "cross-env": "^5.2.0"
   },
   "dependencies": {
+    "babel-cli": "^6.26.0",
+    "cross-env": "^5.2.0",
     "babel-runtime": "^6.26.0",
     "gatsby-source-filesystem": "^2.0.17",
     "gtoken": "^2.3.2",
